tests/typecheck/good/builtin-isqrt.scilexp
let one = Uint32 1 in
builtin isqrt one
