tests/typecheck/bad/let-error.scilexp
let a : Int32 = Uint32 0 in
a
